# graphics-progamming-testing

game-of-life-webgpu/: index.html  main.js
game-of-life-webgpu/shaders/: cell.wgsl  simulation.wgsl
hello-world-opengl/: CMakeLists.txt
hello-world-opengl/include/glad/: glad.h
hello-world-opengl/src/: glad.c
